// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`oasOp2xxResponse return errors if missing 2xx 1`] = `
Array [
  Object {
    "code": "operation-2xx-response",
    "message": "Operation must have at least one \`2xx\` response.",
    "path": Array [
      "paths",
      "/path1",
      "get",
      "responses",
    ],
    "range": Object {
      "end": Object {
        "character": 30,
        "line": 9,
      },
      "start": Object {
        "character": 20,
        "line": 4,
      },
    },
    "severity": 1,
    "source": undefined,
    "summary": "Operation must have at least one \`2xx\` response.",
  },
]
`;

exports[`oasOp2xxResponse return errors if no responses 1`] = `
Array [
  Object {
    "code": "operation-2xx-response",
    "message": "Operation must have at least one \`2xx\` response.",
    "path": Array [
      "paths",
      "/path1",
      "get",
      "responses",
    ],
    "range": Object {
      "end": Object {
        "character": 23,
        "line": 4,
      },
      "start": Object {
        "character": 20,
        "line": 4,
      },
    },
    "severity": 1,
    "source": undefined,
    "summary": "Operation must have at least one \`2xx\` response.",
  },
]
`;
